[gd_scene load_steps=10 format=3 uid="uid://drvw4j13e4me3"]

[ext_resource type="Texture2D" uid="uid://d0jx2r6fthbv1" path="res://graphics/rod2.png" id="1_8yin0"]
[ext_resource type="Script" path="res://scenes/fishin.gd" id="1_nyrks"]
[ext_resource type="Script" path="res://scenes/rod_sprite.gd" id="2_3iysg"]
[ext_resource type="Texture2D" uid="uid://duwwpq6ct65ow" path="res://graphics/cigs2.png" id="2_mlbel"]
[ext_resource type="AudioStream" uid="uid://byq1vbavpfqvc" path="res://audio/ciggy_cough.mp3" id="4_7lpk6"]
[ext_resource type="Script" path="res://scenes/cigs_sprite.gd" id="4_mmii0"]
[ext_resource type="AudioStream" uid="uid://coa7p73yj1up7" path="res://audio/having-a-drag.mp3" id="6_ku20n"]
[ext_resource type="AudioStream" uid="uid://crtk5ihjfw34s" path="res://audio/slorp-boosted.mp3" id="7_hnipi"]
[ext_resource type="AudioStream" uid="uid://c4j7sox7q24mg" path="res://audio/funky_beat_clip.mp3" id="9_d6gu0"]

[node name="Fishin" type="Node2D"]
script = ExtResource("1_nyrks")

[node name="RodSprite" type="Sprite2D" parent="."]
position = Vector2(758, 391)
scale = Vector2(0.766667, 0.735149)
texture = ExtResource("1_8yin0")
script = ExtResource("2_3iysg")

[node name="CigsSprite" type="Sprite2D" parent="."]
position = Vector2(236.75, 211.5)
scale = Vector2(0.463235, 0.482398)
texture = ExtResource("2_mlbel")
script = ExtResource("4_mmii0")

[node name="CiggyCough" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7lpk6")
volume_db = -10.0

[node name="Drag" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ku20n")
volume_db = -10.0

[node name="Sip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hnipi")
volume_db = -10.0

[node name="FunkyBeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d6gu0")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SmokeBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 14.0
offset_right = 407.0
offset_bottom = 53.0
value = 100.0
show_percentage = false

[node name="DrinkBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 62.0
offset_right = 407.0
offset_bottom = 101.0
value = 100.0
show_percentage = false
